<resources>
    <string name="app_name">How</string>
    <string name="main_page">首页</string>
    <string name="find">发现</string>
    <string name="my">我的</string>
    <string name="add">添加</string>
    <string name="message">消息</string>
    <string name="about">关于</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="activity">活动</string>
    <string name="user">用户</string>
    <string name="search">搜索</string>
    <string name="recommend">推荐</string>
</resources>